fix(ui): all buttons now below the header on small screens

--- a/app/public/tailwind.css
+++ b/app/public/tailwind.css
@@ -1169,6 +1169,9 @@
   .gap-y-2 {
     row-gap: calc(var(--spacing) * 2);
   }
+  .gap-y-3 {
+    row-gap: calc(var(--spacing) * 3);
+  }
   .gap-y-4 {
     row-gap: calc(var(--spacing) * 4);
   }
